# encoding_rs_compat

./: AUTHORS.txt  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  LICENSE.txt  README.md  generate_constants.py
src/: all.rs  compat.rs  label.rs  lib.rs  testutils.rs  types.rs  util.rs
src/codec/: ascii.rs  japanese.rs  korean.rs  simpchinese.rs  singlebyte.rs  tradchinese.rs  utf_16.rs  utf_8.rs
