[package]
name = "encoding"
version = "0.2.32"
authors = ["Kang Seonghoon (upstream author) <public+rust@mearie.org>",
           "Henri Sivonen (fork author) <hsivonen@hsivonen.fi>"]

description = "rust-encoding API compatibility for encoding_rs"
homepage = "https://hsivonen.fi/rs/encoding_rs/"
documentation = "https://hsivonen.fi/rs/encoding_rs/"
repository = "https://github.com/hsivonen/encoding_rs_compat"
keywords = ["encoding", "unicode", "charset", "encoding_rs", "rust-encoding"]
readme = "README.md"
license = "MIT"

[lib]
name = "encoding"

[dependencies]
encoding_rs = "0.3.0"

[dev-dependencies]
getopts = "*" # for examples

