[package]
name = "encoding"
version = "0.2.33"
authors = ["Kang Seonghoon (upstream author) <public+rust@mearie.org>",
           "Henri Sivonen (fork author) <hsivonen@hsivonen.fi>"]

description = "rust-encoding API compatibility for encoding_rs"
homepage = "https://github.com/hsivonen/encoding_rs_compat"
repository = "https://github.com/hsivonen/encoding_rs_compat"
keywords = ["encoding", "unicode", "charset", "encoding_rs", "rust-encoding"]
readme = "README.md"
license = "MIT"

[lib]
name = "encoding"

[features]
simd-accel = ["encoding_rs/simd-accel"]
no-optimized-legacy-encoding = ["encoding_rs/no-static-ideograph-encoder-tables"]
parallel-utf8 = ["encoding_rs/parallel-utf8"]

[dependencies]
encoding_rs = "0.4.0"

[dev-dependencies]
getopts = "*" # for examples

[profile.release]
lto = true
