[package]
name = "encoding"
version = "0.2.33"
authors = ["Kang Seonghoon (upstream author) <public+rust@mearie.org>",
           "Henri Sivonen (fork author) <hsivonen@hsivonen.fi>"]

description = "rust-encoding API compatibility for encoding_rs"
homepage = "https://github.com/hsivonen/encoding_rs_compat"
repository = "https://github.com/hsivonen/encoding_rs_compat"
keywords = ["encoding", "unicode", "charset", "encoding_rs", "rust-encoding"]
readme = "README.md"
license = "MIT"

[lib]
name = "encoding"

[features]
simd-accel = ["encoding_rs/simd-accel"]
less-slow-kanji-encode = ["encoding_rs/less-slow-kanji-encode"]
less-slow-big5-hanzi-encode = ["encoding_rs/less-slow-big5-hanzi-encode"]
less-slow-gb-hanzi-encode = ["encoding_rs/less-slow-gb-hanzi-encode"]
fast-hangul-encode = ["encoding_rs/fast-hangul-encode"]
fast-hanja-encode = ["encoding_rs/fast-hanja-encode"]
fast-kanji-encode = ["encoding_rs/fast-kanji-encode"]
fast-gb-hanzi-encode = ["encoding_rs/fast-gb-hanzi-encode"]
fast-big5-hanzi-encode = ["encoding_rs/fast-big5-hanzi-encode"]
fast-legacy-encode = ["encoding_rs/fast-legacy-encode"]

[dependencies]
encoding_rs = "0.8.13"

[dev-dependencies]
getopts = "*" # for examples

[profile.release]
lto = true
